infra/k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rokkitpokkit
  namespace: rokkitpokkit
spec:
  hostnames:
    - rokkitpokkit.samcday.com
    - xn--nu8h3y.samcday.com
  parentRefs:
    - name: shared
      namespace: nginx-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rokkitpokkit
          port: 80
